# market-data-processor

./: .env  .gitignore  Cargo.toml  benchmark.txt  benchmark_750,7500,3.txt
src/: api_connector.rs  cooldown_handler.rs  error.rs  kline.rs  main.rs  trading_pair.rs
src/database/: analyzer.rs  db.rs  docker_pg.rs  mod.rs  postgres.rs  sqlite.rs
src/logger/: logger.rs
src/neural/: mod.rs
