[package]
name = "market-data-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.66"
chrono = "0.4.24"
concat-string = "1.0.1"
concurrent-queue = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.27"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
shlex = "1.1.0"
sqlx = { version = "0.6.2", features = ["postgres", "mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["macros", "sync"] }
